# mpl-core-appdata-example

./: Anchor.toml  README.md  dump-programs.sh
programs/mpl-core-appdata-example/: Cargo.toml
programs/mpl-core-appdata-example/src/: lib.rs
tests/: mpl-core-appdata-example.ts
